<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.detatech.vitaluser.Activities.Main2Activity">

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1dp"-->
    <!--android:background="@color/grey_10" />-->

    <ImageView
        android:id="@+id/bg_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/logo3"
        android:scaleType="centerCrop"
        android:alpha="0.8"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

            <!--<View-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="@dimen/spacing_middle" />-->

            <ImageView
                android:id="@+id/logo"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/spacing_middle"
                android:paddingStart="@dimen/spacing_middle">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_small"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/grey_5"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp">

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:id="@+id/mrl_requests"
                        style="@style/RippleStyleBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/spacing_large">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginBottom="@dimen/spacing_smlarge"
                                android:layout_marginTop="@dimen/spacing_smlarge"
                                android:tint="@color/blue_700"
                                app:srcCompat="@drawable/request_doctor2" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/tahoma"
                                android:text="@string/requests"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textColor="@color/grey_90" />

                        </LinearLayout>

                    </com.balysv.materialripple.MaterialRippleLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_small"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/grey_5"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp">

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:id="@+id/mrl_icu"
                        style="@style/RippleStyleBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/spacing_large">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginBottom="@dimen/spacing_smlarge"
                                android:layout_marginTop="@dimen/spacing_smlarge"
                                android:tint="@color/blue_700"
                                app:srcCompat="@drawable/icu" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/tahoma"
                                android:maxLines="1"
                                android:text="@string/icu"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textColor="@color/grey_90" />

                        </LinearLayout>

                    </com.balysv.materialripple.MaterialRippleLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/spacing_middle"
                android:paddingStart="@dimen/spacing_middle">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_small"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/grey_5"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp">

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:id="@+id/mrl_ambulance"
                        style="@style/RippleStyleBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/spacing_large">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginBottom="@dimen/spacing_smlarge"
                                android:layout_marginTop="@dimen/spacing_smlarge"
                                android:tint="@color/blue_700"
                                app:srcCompat="@drawable/ambulance2" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/tahoma"
                                android:text="@string/ambulance"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textColor="@color/grey_90" />

                        </LinearLayout>

                    </com.balysv.materialripple.MaterialRippleLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_small"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/grey_5"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp">

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:id="@+id/mrl_profile"
                        style="@style/RippleStyleBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/spacing_large">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginBottom="@dimen/spacing_smlarge"
                                android:layout_marginTop="@dimen/spacing_smlarge"
                                android:tint="@color/blue_700"
                                app:srcCompat="@drawable/ic_account_circle_36dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/tahoma"
                                android:maxLines="1"
                                android:text="@string/profile"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textColor="@color/grey_90" />

                        </LinearLayout>

                    </com.balysv.materialripple.MaterialRippleLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <!-- <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:baselineAligned="false"
                 android:orientation="horizontal"
                 android:weightSum="2">

                 <LinearLayout
                     android:id="@+id/ll_requests"
                     android:layout_width="0dp"
                     android:layout_height="130dp"
                     android:layout_margin="2dp"
                     android:layout_weight="1"
                     android:background="@color/colorGrapeFruit"
                     android:orientation="vertical">

                     <ImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="20dp"
                         android:src="@drawable/request_doctor2"
                         android:tint="@color/colorWhite" />

                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="30dp"
                         android:background="@color/colorGrapeFruitDark"
                         android:padding="8dp"
                         android:text="@string/requests"
                         android:textAlignment="center"
                         android:textColor="@color/colorWhite"
                         android:textSize="18sp" />

                 </LinearLayout>

                 <LinearLayout
                     android:id="@+id/ll_icu"
                     android:layout_width="0dp"
                     android:layout_height="130dp"
                     android:layout_margin="2dp"
                     android:layout_weight="1"
                     android:background="@color/colorFlower"
                     android:orientation="vertical">

                     <ImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="20dp"
                         android:src="@drawable/icu"
                         android:tint="@color/colorWhite" />

                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="30dp"
                         android:background="@color/colorFlowerDark"
                         android:padding="8dp"
                         android:text="@string/icu"
                         android:textAlignment="center"
                         android:textColor="@color/colorWhite"
                         android:textSize="18sp" />

                 </LinearLayout>


             </LinearLayout>

             &lt;!&ndash; Second Row&ndash;&gt;
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:weightSum="2">

                 <LinearLayout
                     android:id="@+id/ll_ambulance"
                     android:layout_width="0dp"
                     android:layout_height="130dp"
                     android:layout_margin="2dp"
                     android:layout_weight="1"
                     android:background="@color/colorBlueJeans"
                     android:orientation="vertical">

                     <ImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="20dp"
                         android:src="@drawable/ambulance2"
                         android:tint="@color/colorWhite" />

                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="30dp"
                         android:background="@color/colorBlueJeansDark"
                         android:padding="8dp"
                         android:text="@string/ambulance"
                         android:textAlignment="center"
                         android:textColor="@color/colorWhite"
                         android:textSize="18sp" />

                 </LinearLayout>

                 <LinearLayout
                     android:id="@+id/ll_profile"
                     android:layout_width="0dp"
                     android:layout_height="130dp"
                     android:layout_margin="2dp"
                     android:layout_weight="1"
                     android:background="@color/colorLavander"
                     android:orientation="vertical">

                     <ImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="20dp"
                         android:src="@drawable/ic_account_circle_36dp"
                         android:tint="@color/colorWhite" />

                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="30dp"
                         android:background="@color/colorLavanderDark"
                         android:padding="8dp"
                         android:text="@string/profile"
                         android:textAlignment="center"
                         android:textColor="@color/colorWhite"
                         android:textSize="18sp" />

                 </LinearLayout>

             </LinearLayout>
              End Second Row-->
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
